<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PlaySudokuActivity">

    <com.example.sudokusolver.view.customViews.SudokuBoardView
        android:id="@+id/sudokuBoardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_7"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_8"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_9"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_4"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_5"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_6"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_1"
                tools:ignore="TextContrastCheck"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/button2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_2"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:backgroundTint="@color/teal_700"
                android:padding="30dp"
                android:text="@string/_3"
                tools:ignore="TextContrastCheck" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/clear"
                android:layout_margin="5dp"
                android:text="@string/clear"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:visibility="invisible"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/solve"
                android:layout_margin="5dp"
                android:text="@string/solve"
                style="?android:attr/buttonBarButtonStyle" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>